cmake_minimum_required(VERSION 3.15)
project(stereo_rectify)
find_package(Eigen3)
find_package(OpenCV)
find_package(Ceres)
set(CMAKE_CXX_STANDARD 14)
include_directories(${EIGEN3_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${CERES_INCLUDE_DIRS})
add_executable(stereo_rectify main.cpp stereo_rectify.h optimizer.h viewer.h)
target_link_libraries(stereo_rectify ${OpenCV_LIBS} ${CERES_LIBRARIES})